2011-08-01	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>

	PR 1869/bsps
	* startup/bspclean.c: New file.
	* include/tm27.h: Removed.
	* ChangeLog, Makefile.am, README, preinstall.am, include/bsp.h,
	include/system_conf.h, make/custom/milkymist.cfg, startup/linkcmds:
	Complete BSP for Milkymist One supporting Milkymist SOC 1.0.x.
	Includes new or updated drivers for:
	  - Multi-standard video input (PAL/SECAM/NTSC)
	  - Two DMX512 (RS485) ports
	  - MIDI IN and MIDI OUT ports
	  - VGA output
	  - AC'97 audio
	  - NOR flash
	  - 10/100 Ethernet
	  - Memory card (experimental and incomplete)
	  - USB host connectors (input devices only)
	  - RC5 infrared receiver
	  - RS232 debug port

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-08-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* .cvsignore: New file.

2010-08-20	<yann.sionneau@telecom-sudparis.eu>

	Add Milkymist BSP developed as part of GSOC 2010.
	* ChangeLog, Makefile.am, README, bsp_specs, configure.ac,
	preinstall.am, Documentation/uart.txt, include/.cvsignore,
	include/bsp.h, include/system_conf.h, include/tm27.h,
	make/custom/milkymist.cfg, startup/linkcmds: New files.