@@ -1,3 +1,9 @@
+2011-11-27	Sebastien Bourdeauducq <seb@tmplab.org>
+
+	PR 1966/bsps
+	* include/system_conf.h: support for the new UART core and interrupt
+	map
+
 2011-08-01	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>
 
 	PR 1869/bsps
